[FLINK-16504][dynamodb connector] Dynamodb sink integration tests fix test with credentials